# tap-calendly

./: .env  .gitignore  .pre-commit-config.yaml  README.md  meltano.yml  output.json  pyproject.toml
.github/workflows/: build.yml  test.yml
tap_calendly/: __init__.py  __main__.py  client.py  streams.py  tap.py
tap_calendly/schemas/: invitees.json  scheduled_events.json
tests/: __init__.py  test_core.py
